apps/architect-viewer/envoy/envoy.yaml
admin:
    access_log_path: "/dev/stdout"
    address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }

static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address: { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: AUTO
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        # This is the emulator endpoint for grpc requests.
                                        - match: { prefix: "/android.emulation.control" }
                                          route: { cluster: emulator_service_grpc }

                                        # This is the JWT token provider, responsible for handing our secure tokens.
                                        - match: { prefix: "/token" }
                                          route: { cluster: jwt_signer }

                                        # The rest will be available under our webapp.
                                        - match: { prefix: "/" }
                                          route: { cluster: frontend }
                          http_filters:
                              # We setup a JWT authentication endpoint in front of the gRPC engine.
                              # This will enforce JWT token validation before we forward the gRPC call
                              - name: envoy.filters.http.jwt_authn
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                                    providers:
                                        emulator-jwt:
                                            issuer: android-emulator@jwt-provider.py
                                            audiences:
                                                - android.emulation.control.EmulatorController
                                            local_jwks:
                                                filename: /etc/jwt_secrets_pub.jwks
                                    rules:
                                        - match: { prefix: "/android.emulation.control.EmulatorController" }
                                          requires: { provider_name: "emulator-jwt" }
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: emulator_service_grpc
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
              cluster_name: emulator_service_grpc
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: emulator
                                      port_value: 8554
        - name: jwt_signer
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
              cluster_name: jwt_signer
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: jwt_signer
                                      port_value: 8080
        - name: frontend
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
              cluster_name: frontend
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: frontend
                                      port_value: 8080
